<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/windowbg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/dnsBtn"
        android:layout_width="360dp"
        android:layout_height="44dp"

        android:layout_marginTop="10dp"
        android:background="@drawable/buttonbg"
        android:backgroundTint="@color/ic_banner_background"
        android:backgroundTintMode="multiply"
        android:text="@string/dns"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/dnsTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dnsDesc"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/datetimeBtn"
        android:layout_width="360dp"
        android:layout_height="44dp"

        android:layout_marginTop="10dp"
        android:background="@drawable/buttonbg"
        android:backgroundTint="@color/ic_banner_background"
        android:backgroundTintMode="multiply"
        android:text="@string/datetime"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/datetimeTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/datetimeDesc"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/appsBtn"
        android:layout_width="360dp"
        android:layout_height="44dp"

        android:layout_marginTop="10dp"
        android:background="@drawable/buttonbg"
        android:backgroundTint="@color/ic_banner_background"
        android:backgroundTintMode="multiply"
        android:text="@string/apps"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/appsTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/appsDesc"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/infoBtn"
        android:layout_width="360dp"
        android:layout_height="44dp"

        android:layout_marginTop="10dp"
        android:background="@drawable/buttonbg"
        android:backgroundTint="@color/ic_banner_background"
        android:backgroundTintMode="multiply"
        android:text="@string/info"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/infoTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/infoDesc"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/accessiblityBtn"
        android:layout_width="360dp"
        android:layout_height="44dp"

        android:layout_marginTop="10dp"
        android:background="@drawable/buttonbg"
        android:backgroundTint="@color/ic_banner_background"
        android:backgroundTintMode="multiply"
        android:text="@string/acessibility"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/accessibilityTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/acessibilityDesc"
        android:textColor="#FFFFFF" />

        <Button
        android:id="@+id/devBtn"
        android:layout_width="360dp"
        android:layout_height="44dp"

        android:layout_marginTop="10dp"
        android:background="@drawable/buttonbg"
        android:backgroundTint="@color/ic_banner_background"
        android:backgroundTintMode="multiply"
        android:text="@string/dev"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/devTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/devDesc"
        android:textColor="#FFFFFF" />

</LinearLayout>
